# STC_test_task

./: README.md
task1/: CMakeLists.txt  cities.db3
task1/cities-app/: CMakeLists.txt  cityfilterproxymodel.cpp  cityfilterproxymodel.h  citytablewidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
task1/cities-core/: CMakeLists.txt  cities-core_global.h  city.cpp  city.h  citydao.cpp  citydao.h  citymodel.cpp  citymodel.h  databasemanager.cpp  databasemanager.h
task2/: CMakeLists.txt  job.cpp  job.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
task3/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
